# tenable-sc-mcp-server

./: .coverage  .dockerignore  .env.example  .gitignore  ACTION_CHECKLIST.md  AGENTS.md  ARCHITECTURE.md  BRANCH_PROTECTION_SETUP.md  CACHE_BUG_REPORT.md  CACHING_DEEP_DIVE.md  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_TEST_SUITE.md  CONTRIBUTING.md  CONVENIENCE_TOOLS_ROADMAP.md  CVSS_COMPONENTS_ANALYSIS.md  DEPLOYMENT_LIVE.md  DESIGN_PRINCIPLES.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  EXECUTIVE_SUMMARY.md  FILTER_FORMAT_REFERENCE.md  FINAL_SESSION_SUMMARY.md  FINAL_ULTIMATE_ROADMAP.md  HANDOFF.md  MULTI_CLIENT_API_KEYS.md  MYPY_STATUS.md  NEXT_SESSION_INSTRUCTIONS.md  NEXT_SESSION_INSTRUCTIONS.txt  OS_AND_PLUGIN_FAMILY_FIX.md  PHASE1_COMPLETE.md  PROJECT_STATUS.md  QUICK_RULESET_SETUP.md  README.md  REFACTOR_SUMMARY.md  RELEASE_COMPLETE_SUMMARY.md  RELEASE_NOTES_v1.2.0.md  SECURITY.md  (+43 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.private/: HANDOFF.md  TOOLS_ROADMAP.md
docs/: TOOL2_IMPLEMENTATION.md  TOOL7_SPEC.md  TOOLS.md  releasing.md  roadmap.md
docs/archive/: CACHE_PERFORMANCE_RESULTS.md  README.md  TESTING_CACHE_FIX.md
docs/development/: HANDOFF.md
docs/gh-pages/: QUICKSTART.md  SETUP.md  architecture.html  caching.html  index.html
src/tenable_sc_mcp/: __init__.py  cache.py  catalog.py  client.py  convenience_tools.py  server.py
src/tenable_sc_mcp/resources/: __init__.py  filter_format_reference_v2.py  filter_reference.py
src/tenable_sc_mcp/tools/: __init__.py  asset_discovery.py  ip_profiling.py  patch_management.py  scanning.py  vulnerability_lookup.py
src/tenable_sc_mcp/tools/admin/: __init__.py  plugins.py
tests/: test_cache.py  test_catalog.py  test_convenience_tools.py  test_patch_management.py  test_scanning.py  test_server_helpers.py  test_tool2_integration.py  test_tool4_integration.py
tests/integration/: test_integration.py
