[project]
name = "tenable-sc-mcp"
version = "0.1.0"
description = "MCP server for the Tenable Security Center Plus REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.2.0",
]

[project.scripts]
tenable-sc-mcp = "tenable_sc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tenable_sc_mcp"]
