[project]
name = "tenable-sc-mcp"
version = "1.3.1"
description = "MCP server for the Tenable Security Center Plus REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.2.0",
  "redis>=5.0.0",
  "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-httpx>=0.30.0",
  "pytest-asyncio>=0.23.0",
  "coverage>=7.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
tenable-sc-mcp = "tenable_sc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tenable_sc_mcp"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/tenable_sc_mcp"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
